Mobile app improved, needs testing
